--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   "dependencies": {
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "axios": "^1.9.0",
     "next": "^15.3.3",
+    "nodemon": "^3.1.10",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "sass": "^1.89.1"
   },
   "devDependencies": {
     "@types/node": "22.15.27",
